[package]
name = "repoint"
version = "0.1.0"
authors = ["7db9a"]
edition = "2018"

[[bin]]
name = "repoint"
path = "src/bin/main.rs"
doc = false

[lib]
name = "repoint"
path = "src/mod.rs"

[dependencies]
seahorse = "0.7.1"
toml = "0.5"
toml_edit = "0.1.5"
dirs = "3.0.1"
easy-hasher = "2.1.1"
cmd_lib = "0.7.8"
fixture = { path = "fixture" }
